--- a/randoms/package.json
+++ b/randoms/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/veyseltosun/second-random.git",
+  "homepage": "https://github.com/veyseltosun/second-random",
   "name": "randoms",
   "version": "0.1.0",
   "private": true,
